// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`convertDimensions > should correctly convert single dim definition with attributes and measure group 1`] = `
[
  {
    "itemIdentifiers": [
      "localId1",
      "localId2",
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions > should correctly convert single dim definition with attributes and measure group with attribute sorts 1`] = `
[
  {
    "itemIdentifiers": [
      "localId1",
      "localId2",
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
    "sorting": [
      {
        "attribute": {
          "attributeIdentifier": "localId1",
          "sortType": "DEFAULT",
        },
      },
    ],
  },
]
`;

exports[`convertDimensions > should correctly convert single dim definition with attributes and measure group with measure sorts with attribute locators 1`] = `
[
  {
    "itemIdentifiers": [
      "localId1",
      "localId2",
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions > should correctly convert single dim definition with attributes and measure group with measure sorts with attribute locators that contain element URIs 1`] = `
[
  {
    "itemIdentifiers": [
      "localId1",
      "localId2",
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions > should correctly convert single dim definition with attributes and measure group with measure sorts without attribute locators 1`] = `
[
  {
    "itemIdentifiers": [
      "localId1",
      "localId2",
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions > should correctly convert single dim definition with just attributes 1`] = `
[
  {
    "itemIdentifiers": [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions > should correctly convert single dim definition with just attributes with attribute sorts 1`] = `
[
  {
    "itemIdentifiers": [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_0",
    "sorting": [
      {
        "attribute": {
          "attributeIdentifier": "localId1",
          "sortType": "DEFAULT",
        },
      },
    ],
  },
]
`;

exports[`convertDimensions > should correctly convert single dim definition with just attributes with measure sorts with attribute locators 1`] = `
[
  {
    "itemIdentifiers": [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions > should correctly convert single dim definition with just attributes with measure sorts with attribute locators that contain element URIs 1`] = `
[
  {
    "itemIdentifiers": [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions > should correctly convert single dim definition with just attributes with measure sorts without attribute locators 1`] = `
[
  {
    "itemIdentifiers": [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions > should correctly convert single dim definition with just measure group 1`] = `
[
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions > should correctly convert single dim definition with just measure group with attribute sorts 1`] = `
[
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions > should correctly convert single dim definition with just measure group with measure sorts with attribute locators 1`] = `
[
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions > should correctly convert single dim definition with just measure group with measure sorts with attribute locators that contain element URIs 1`] = `
[
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions > should correctly convert single dim definition with just measure group with measure sorts without attribute locators 1`] = `
[
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
]
`;

exports[`convertDimensions > should correctly convert two dim definition with attributes in first and measure group in second 1`] = `
[
  {
    "itemIdentifiers": [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_0",
  },
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
    "localIdentifier": "dim_1",
  },
]
`;

exports[`convertDimensions > should correctly convert two dim definition with attributes in first and measure group in second with attribute sorts 1`] = `
[
  {
    "itemIdentifiers": [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_0",
    "sorting": [
      {
        "attribute": {
          "attributeIdentifier": "localId1",
          "sortType": "DEFAULT",
        },
      },
    ],
  },
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
    "localIdentifier": "dim_1",
  },
]
`;

exports[`convertDimensions > should correctly convert two dim definition with attributes in first and measure group in second with measure sorts with attribute locators 1`] = `
[
  {
    "itemIdentifiers": [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_0",
    "sorting": [
      {
        "value": {
          "dataColumnLocators": {
            "dim_1": {
              "localId1": "PrimaryLabelValue",
              "measureGroup": "testMeasure",
            },
          },
          "direction": "DESC",
        },
      },
    ],
  },
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
    "localIdentifier": "dim_1",
  },
]
`;

exports[`convertDimensions > should correctly convert two dim definition with attributes in first and measure group in second with measure sorts with attribute locators that contain element URIs 1`] = `
[
  {
    "itemIdentifiers": [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_0",
    "sorting": [
      {
        "value": {
          "dataColumnLocators": {
            "dim_1": {
              "localId1": "PrimaryLabelValue",
              "measureGroup": "testMeasure",
            },
          },
          "direction": "DESC",
        },
      },
    ],
  },
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
    "localIdentifier": "dim_1",
  },
]
`;

exports[`convertDimensions > should correctly convert two dim definition with attributes in first and measure group in second with measure sorts without attribute locators 1`] = `
[
  {
    "itemIdentifiers": [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_0",
    "sorting": [
      {
        "value": {
          "dataColumnLocators": {
            "dim_1": {
              "measureGroup": "testMeasure",
            },
          },
          "direction": "ASC",
        },
      },
    ],
  },
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
    "localIdentifier": "dim_1",
  },
]
`;

exports[`convertDimensions > should correctly convert two dim definition with attributes in second and measure group in first 1`] = `
[
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
  {
    "itemIdentifiers": [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_1",
  },
]
`;

exports[`convertDimensions > should correctly convert two dim definition with attributes in second and measure group in first with attribute sorts 1`] = `
[
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
  {
    "itemIdentifiers": [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_1",
    "sorting": [
      {
        "attribute": {
          "attributeIdentifier": "localId1",
          "sortType": "DEFAULT",
        },
      },
    ],
  },
]
`;

exports[`convertDimensions > should correctly convert two dim definition with attributes in second and measure group in first with measure sorts with attribute locators 1`] = `
[
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
  {
    "itemIdentifiers": [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_1",
    "sorting": [
      {
        "value": {
          "dataColumnLocators": {
            "dim_0": {
              "localId1": "PrimaryLabelValue",
              "measureGroup": "testMeasure",
            },
          },
          "direction": "DESC",
        },
      },
    ],
  },
]
`;

exports[`convertDimensions > should correctly convert two dim definition with attributes in second and measure group in first with measure sorts with attribute locators that contain element URIs 1`] = `
[
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
  {
    "itemIdentifiers": [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_1",
    "sorting": [
      {
        "value": {
          "dataColumnLocators": {
            "dim_0": {
              "localId1": "PrimaryLabelValue",
              "measureGroup": "testMeasure",
            },
          },
          "direction": "DESC",
        },
      },
    ],
  },
]
`;

exports[`convertDimensions > should correctly convert two dim definition with attributes in second and measure group in first with measure sorts without attribute locators 1`] = `
[
  {
    "itemIdentifiers": [
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
  {
    "itemIdentifiers": [
      "localId1",
      "localId2",
    ],
    "localIdentifier": "dim_1",
    "sorting": [
      {
        "value": {
          "dataColumnLocators": {
            "dim_0": {
              "measureGroup": "testMeasure",
            },
          },
          "direction": "ASC",
        },
      },
    ],
  },
]
`;

exports[`convertDimensions > should correctly convert two dim definition with attributes+measure group in first and attributes in second 1`] = `
[
  {
    "itemIdentifiers": [
      "localId1",
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
  {
    "itemIdentifiers": [
      "localId2",
    ],
    "localIdentifier": "dim_1",
  },
]
`;

exports[`convertDimensions > should correctly convert two dim definition with attributes+measure group in first and attributes in second with attribute sorts 1`] = `
[
  {
    "itemIdentifiers": [
      "localId1",
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
    "sorting": [
      {
        "attribute": {
          "attributeIdentifier": "localId1",
          "sortType": "DEFAULT",
        },
      },
    ],
  },
  {
    "itemIdentifiers": [
      "localId2",
    ],
    "localIdentifier": "dim_1",
  },
]
`;

exports[`convertDimensions > should correctly convert two dim definition with attributes+measure group in first and attributes in second with measure sorts with attribute locators 1`] = `
[
  {
    "itemIdentifiers": [
      "localId1",
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
  {
    "itemIdentifiers": [
      "localId2",
    ],
    "localIdentifier": "dim_1",
    "sorting": [
      {
        "value": {
          "dataColumnLocators": {
            "dim_0": {
              "localId1": "PrimaryLabelValue",
              "measureGroup": "testMeasure",
            },
          },
          "direction": "DESC",
        },
      },
    ],
  },
]
`;

exports[`convertDimensions > should correctly convert two dim definition with attributes+measure group in first and attributes in second with measure sorts with attribute locators that contain element URIs 1`] = `
[
  {
    "itemIdentifiers": [
      "localId1",
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
  {
    "itemIdentifiers": [
      "localId2",
    ],
    "localIdentifier": "dim_1",
    "sorting": [
      {
        "value": {
          "dataColumnLocators": {
            "dim_0": {
              "localId1": "PrimaryLabelValue",
              "measureGroup": "testMeasure",
            },
          },
          "direction": "DESC",
        },
      },
    ],
  },
]
`;

exports[`convertDimensions > should correctly convert two dim definition with attributes+measure group in first and attributes in second with measure sorts without attribute locators 1`] = `
[
  {
    "itemIdentifiers": [
      "localId1",
      "measureGroup",
    ],
    "localIdentifier": "dim_0",
  },
  {
    "itemIdentifiers": [
      "localId2",
    ],
    "localIdentifier": "dim_1",
    "sorting": [
      {
        "value": {
          "dataColumnLocators": {
            "dim_0": {
              "measureGroup": "testMeasure",
            },
          },
          "direction": "ASC",
        },
      },
    ],
  },
]
`;

exports[`convertDimensions > should correctly convert two dim definition with attributes+measure group in second and attributes in first 1`] = `
[
  {
    "itemIdentifiers": [
      "localId2",
    ],
    "localIdentifier": "dim_0",
  },
  {
    "itemIdentifiers": [
      "localId1",
      "measureGroup",
    ],
    "localIdentifier": "dim_1",
  },
]
`;

exports[`convertDimensions > should correctly convert two dim definition with attributes+measure group in second and attributes in first with attribute sorts 1`] = `
[
  {
    "itemIdentifiers": [
      "localId2",
    ],
    "localIdentifier": "dim_0",
  },
  {
    "itemIdentifiers": [
      "localId1",
      "measureGroup",
    ],
    "localIdentifier": "dim_1",
    "sorting": [
      {
        "attribute": {
          "attributeIdentifier": "localId1",
          "sortType": "DEFAULT",
        },
      },
    ],
  },
]
`;

exports[`convertDimensions > should correctly convert two dim definition with attributes+measure group in second and attributes in first with measure sorts with attribute locators 1`] = `
[
  {
    "itemIdentifiers": [
      "localId2",
    ],
    "localIdentifier": "dim_0",
    "sorting": [
      {
        "value": {
          "dataColumnLocators": {
            "dim_1": {
              "localId1": "PrimaryLabelValue",
              "measureGroup": "testMeasure",
            },
          },
          "direction": "DESC",
        },
      },
    ],
  },
  {
    "itemIdentifiers": [
      "localId1",
      "measureGroup",
    ],
    "localIdentifier": "dim_1",
  },
]
`;

exports[`convertDimensions > should correctly convert two dim definition with attributes+measure group in second and attributes in first with measure sorts with attribute locators that contain element URIs 1`] = `
[
  {
    "itemIdentifiers": [
      "localId2",
    ],
    "localIdentifier": "dim_0",
    "sorting": [
      {
        "value": {
          "dataColumnLocators": {
            "dim_1": {
              "localId1": "PrimaryLabelValue",
              "measureGroup": "testMeasure",
            },
          },
          "direction": "DESC",
        },
      },
    ],
  },
  {
    "itemIdentifiers": [
      "localId1",
      "measureGroup",
    ],
    "localIdentifier": "dim_1",
  },
]
`;

exports[`convertDimensions > should correctly convert two dim definition with attributes+measure group in second and attributes in first with measure sorts without attribute locators 1`] = `
[
  {
    "itemIdentifiers": [
      "localId2",
    ],
    "localIdentifier": "dim_0",
    "sorting": [
      {
        "value": {
          "dataColumnLocators": {
            "dim_1": {
              "measureGroup": "testMeasure",
            },
          },
          "direction": "ASC",
        },
      },
    ],
  },
  {
    "itemIdentifiers": [
      "localId1",
      "measureGroup",
    ],
    "localIdentifier": "dim_1",
  },
]
`;
